Espaces insécables et demi-espace devant ;

--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -62,7 +62,7 @@ pourront servir de support).}
   \item
     Découverte et prise en main du réseau local
   \item
-    Adressage \textabbrv{IP}v4 : classes d'adresses, masques naturels, adressage
+    Adressage \textabbrv{IP}v4~: classes d'adresses, masques naturels, adressage
     statique, adressage dynamique (\textabbrv{DHCP})
   \item
     Notion de routage, de passerelle et de serveur \textabbrv{DNS}
@@ -73,7 +73,7 @@ pourront servir de support).}
   \item
     Architecture d'un système d'exploitation
   \item
-    Différents types de systèmes d'exploitation : les clients, les
+    Différents types de systèmes d'exploitation~: les clients, les
     serveurs, les systèmes embarqués
   \item
     Systèmes d'exploitation commerciaux et Open Sources.
