--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -46,7 +46,7 @@ la sûreté de fonctionnement du réseau local Ethernet (spanning tree) et
 la participation à la sécurisation du système d'information dont il est
 le support (segmentation physique et virtuelle, \textabbrv{VLAN}). Ces deux
 compétences s'appuient sur la compréhension des mécanismes intrinsèques
-aux réseaux locaux Ethernet : adressage \textabbrv{MAC}, commutation/routage de
+aux réseaux locaux Ethernet~: adressage \textabbrv{MAC}, commutation/routage de
 niveau 2, \textabbrv{ARP}, passage d'un type de support physique à un autre,
 changements de débit.\\
 Pour la compétence \og Connecter les entreprises et les usagers\fg{}
@@ -66,15 +66,15 @@ découverte du poste client et de son environnement logiciel.}
 \item
   Normalisation Ethernet 802 (802.1, 802.2, 802.3).
 \item
-  Commutation Ethernet : apprentissage des adresses \textabbrv{MAC}, diffusion,
+  Commutation Ethernet~: apprentissage des adresses \textabbrv{MAC}, diffusion,
   Broadcast.
 \item
-  Différents équipements actifs : commutateur, routeur.
+  Différents équipements actifs~: commutateur, routeur.
 \item
   Configuration d'un réseau segmenté en \textabbrv{VLAN}, lien multi-vlan,
   communication inter-vlan.
 \item
-  Redondance et détection de boucles dans un réseau commuté: \textabbrv{STP}, \textabbrv{RSTP}.
+  Redondance et détection de boucles dans un réseau commuté~: \textabbrv{STP}, \textabbrv{RSTP}.
 \end{itemize}
 Sur chaque thème, faire le lien avec les notions de cybersécurité
 abordées en R101.
