--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -52,13 +52,13 @@ navigateur Web.}
 \item
   Utilisation avancée d'un navigateur Web
 \item
-  Structure d'un site Web : client-serveur, arborescence, \textabbrv{URL}
+  Structure d'un site Web~: client-serveur, arborescence, \textabbrv{URL}
 \item
-  Structure d'une page : langage à balise, mise en forme et feuilles de
+  Structure d'une page~: langage à balise, mise en forme et feuilles de
   styles (notions élémentaires
   de \textabbrv{CSS}), notions de responsive design
 \item
-  Contenu d'une page : éléments multimédia, encodage des caractères
+  Contenu d'une page~: éléments multimédia, encodage des caractères
 \item
   Sensibilisation aux mentions obligatoires d'un site Web (mentions
   légales, copyright, \ldots)
