--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -47,22 +47,22 @@ télécommunications.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Introduction aux signaux :
+  Introduction aux signaux~:
   \begin{itemize}
   \item
-    graphe d'un signal;
+    graphe d'un signal\,;
   \item
-    symétries : parité, imparité;
+    symétries~: parité, imparité\,;
   \item
-    causalité, support temporel;
+    causalité, support temporel\,;
   \item
-    équation de droite;
+    équation de droite\,;
   \item
-    fonction définie par morceaux (ex. : valeur absolue);
+    fonction définie par morceaux (ex.~: valeur absolue)\,;
   \item
-    signaux de base : (ex. : porte, triangle, échelon, rampe\ldots);
+    signaux de base~: (ex.~: porte, triangle, échelon, rampe\ldots)\,;
   \item
-    opérations sur les signaux : avance, retard, dilatation,
+    opérations sur les signaux~: avance, retard, dilatation,
     amplification, offset (interprétation géométrique
     sur le graphe), somme de signaux
   \end{itemize}
@@ -71,33 +71,33 @@ Cette partie sera l'occasion de réviser les règles de calculs de base
 par l'intermédiaire du calcul d'images et d'antécédents.
 \begin{itemize}
 \item
-  Éléments de trigonométrie :
+  Éléments de trigonométrie~:
   \begin{itemize}
   \item
-    définition du radian;
+    définition du radian\,;
   \item
-    cercle trigonométrique;
+    cercle trigonométrique\,;
   \item
     formules \(\cos(x)\), \(\cos(\pi\pm x)\) et
     \(\cos(\frac{\pi}{2}\pm x)\)
   \end{itemize}
 \end{itemize}
-et les mêmes avec sinus;
+et les mêmes avec sinus\,;
 \begin{itemize}
 \item
   angles remarquables.
 \item
-  Signaux périodiques :
+  Signaux périodiques~:
   \begin{itemize}
   \item
-    période, fréquence, pulsation;
+    période, fréquence, pulsation\,;
   \item
-    signaux périodiques de base : créneau, dent de scie, sinus, cosinus;
+    signaux périodiques de base~: créneau, dent de scie, sinus, cosinus\,;
   \item
     fréquence/période/pulsation d'un signal dilaté, d'une combinaison
-    linéaire de signaux périodiques;
+    linéaire de signaux périodiques\,;
   \item
-    graphe des signaux avancés, retardés, dilatés;
+    graphe des signaux avancés, retardés, dilatés\,;
   \item
     graphe de \(A\cos(\omega t + \phi)\), \(A\cos(\omega t + \phi)\)
   \end{itemize}
