--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -40,13 +40,13 @@ l'amenant à travailler en équipe.}
 
 % Contenus
 \ajoutRcontenudetaille{
-Dans le cadre de cette ressource transversale, l'étudiant devra :
+Dans le cadre de cette ressource transversale, l'étudiant devra~:
 \begin{itemize}
 \item
-  Partager de façon collective l'information :
+  Partager de façon collective l'information~:
   \begin{itemize}
   \item
-    Utilisation avancée du courriel : création d'une adresse générique,
+    Utilisation avancée du courriel~: création d'une adresse générique,
     utilisation du \textabbrv{CC} et du \textabbrv{CCi}.
   \item
     Utilisation d'outils collaboratifs adaptés (par exemple Mattermost,
@@ -71,7 +71,7 @@ Dans le cadre de cette ressource transversale, l'étudiant devra :
   collaborateur, client) qui interviennent
   dans un projet.
 \item
-  Apprendre à faire un bilan régulier sur l'avancée d'un projet : points
+  Apprendre à faire un bilan régulier sur l'avancée d'un projet~: points
   bloquants, solutions apportées.
 \item
   Appliquer la critique constructive dans l'intérêt du projet
