--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -58,7 +58,7 @@ pourront servir de support).}
 \item
   Utilisation de ssh pour l'accès distant
 \item
-  Principe, installation, configuration et tests des services :
+  Principe, installation, configuration et tests des services~:
 \item
   \textabbrv{DHCP}
 \item
