--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -46,13 +46,13 @@ modifications ces signaux vont subir dans un système télécom.}
 
 % Contenus
 \ajoutRcontenudetaille{
-Étude de la fonction de transfert d'un système linéaire; notion de
-filtrage; réponse fréquentielle d'un support de transmission; notion de
+Étude de la fonction de transfert d'un système linéaire\,; notion de
+filtrage\,; réponse fréquentielle d'un support de transmission\,; notion de
 bande passante. Atténuation, amplification des systèmes.\\
-Représentations temporelles et fréquentielles des signaux; analyse
-spectrale de signaux réels (exemples : audio, WiFi, \textabbrv{ADSL}).\\
+Représentations temporelles et fréquentielles des signaux\,; analyse
+spectrale de signaux réels (exemples~: audio, WiFi, \textabbrv{ADSL}).\\
 Influence de la fonction de transfert d'un système sur un signal
-(exemples : audio, numérique).\\
+(exemples~: audio, numérique).\\
 Bilans de liaison de systèmes de transmissions.
 }
 
