--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -53,7 +53,7 @@ en téléphonie, ou en télécommunications numériques.}
   numérisation et de la restitution de
   signaux analogiques.
 \item
-  Échantillonnage des signaux : choix d'une fréquence adéquate
+  Échantillonnage des signaux~: choix d'une fréquence adéquate
   d'échantillonnage.
 \item
   Quantification des signaux -- Erreur de quantification.
