--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -39,7 +39,7 @@
 \ajoutRancrage{Le professionnel R\&T est amené à développer différents outils
 informatiques à usage personnel ou interne à l'équipe (compétence
 RT3-Programmer). Ces outils peuvent traiter des données complexes, viser
-des fonctionnalités multiples et être développé en équipe : il est alors
+des fonctionnalités multiples et être développé en équipe~: il est alors
 nécessaire - pour le professionnel R\&T - de structurer son travail,
 tant sur les variables manipulant les données, les fichiers qui les
 sauvegardent ou les restaurent, que sur l'organisation (arborescence) de
@@ -52,29 +52,29 @@ précédemment.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Structure d'un programme : arborescence de fichiers, modules et
+  Structure d'un programme~: arborescence de fichiers, modules et
   packages.
 \item
-  Contexte d'exécution : programme principal vs script.
+  Contexte d'exécution~: programme principal vs script.
 \item
-  Structure complexe de données :
+  Structure complexe de données~:
   \begin{itemize}
   \item
-    Listes \textabbrv{2D}, tableaux associatifs/dictionnaires;
+    Listes \textabbrv{2D}, tableaux associatifs/dictionnaires\,;
   \item
     Notion de classes (instance, attributs, méthodes).
   \end{itemize}
 \item
-  Manipulation de fichiers avancée :
+  Manipulation de fichiers avancée~:
   \begin{itemize}
   \item
-    Fichiers structurés (\textabbrv{XML}, \textabbrv{CSV}, \textabbrv{JSON}, YAML);
+    Fichiers structurés (\textabbrv{XML}, \textabbrv{CSV}, \textabbrv{JSON}, YAML)\,;
   \item
-    Gestion de l'arborescence par le code;
+    Gestion de l'arborescence par le code\,;
   \item
-    Lecture/écriture de fichiers structurés;
+    Lecture/écriture de fichiers structurés\,;
   \item
-    Notion de sérialisation;
+    Notion de sérialisation\,;
   \item
     Notion de persistance des données.
   \end{itemize}
