--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -43,10 +43,10 @@
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T peut être amené à développer, pour ses besoins
 personnels ou pour ses collaborateurs, un site Web, par exemple pour
-fournir une interface de présentation du réseau informatique :
+fournir une interface de présentation du réseau informatique~:
 compétence \og Créer des outils et applications informatiques pour les
 R\&T\fg{} (RT3).\\
-Il doit en appréhender tous les éléments : il doit aussi bien connaître
+Il doit en appréhender tous les éléments~: il doit aussi bien connaître
 les protocoles de communication du Web que veiller à la sécurité de
 ceux-ci. Il doit également pouvoir accéder, traiter et afficher des
 informations provenant de différentes sources de données telles que des
@@ -60,14 +60,14 @@ contribue aux apprentissages critiques mentionnés précédemment.}
 \item
   Introduction au protocole \textabbrv{HTTP}.
 \item
-  Mise en forme de pages Web :
+  Mise en forme de pages Web~:
   \begin{itemize}
   \item
-    balises \textabbrv{HTML} avancées;
+    balises \textabbrv{HTML} avancées\,;
   \item
     structure d'une page avec son \textabbrv{DOM};
   \item
-    \textabbrv{CSS} avancé ou Framework;
+    \textabbrv{CSS} avancé ou Framework\,;
   \item
     initiation au dynamisme côté client (JavaScript, bibliothèques comme
     jQuery)
@@ -79,7 +79,7 @@ contribue aux apprentissages critiques mentionnés précédemment.}
 \item
   Interrogation d'un \textabbrv{SGBD} ou d'une \textabbrv{API}.
 \item
-  Sensibilisation à la sécurisation de sites : failles \textabbrv{XSS}, \textabbrv{XSS} stockée,
+  Sensibilisation à la sécurisation de sites~: failles \textabbrv{XSS}, \textabbrv{XSS} stockée,
   injections \textabbrv{SQL}.
 \end{itemize}
 L'utilisation de l'anglais est préconisée dans la documentation du code.
