--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -82,7 +82,7 @@ télécommunications.}
   équipe (coopération, prise en
   compte de l'opinion d'autrui, adaptation, prise d'initiative\ldots)
 \item
-  S'initier à la gestion de projet : argumenter, défendre son point de
+  S'initier à la gestion de projet~: argumenter, défendre son point de
   vue.
 \item
   Agir en cohérence avec les objectifs du développement durable.
