--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -48,40 +48,40 @@ lien avec l'électronique et les télécommunications.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Dérivée :
+  Dérivée~:
   \begin{itemize}
   \item
-    définition;
+    définition\,;
   \item
-    notation \(s'(t)=\frac{\operatorname{d}s}{\operatorname{d}t}\);
+    notation \(s'(t)=\frac{\operatorname{d}s}{\operatorname{d}t}\)\,;
   \item
-    équation de la tangente;
+    équation de la tangente\,;
   \item
-    dérivée des fonctions usuelles;
+    dérivée des fonctions usuelles\,;
   \item
-    opérations sur les dérivées (somme, produit, quotient, composition);
+    opérations sur les dérivées (somme, produit, quotient, composition)\,;
   \item
-    sens de variation;
+    sens de variation\,;
   \item
     application à la recherche d'optimum local.
   \end{itemize}
 \item
-  Comportement local et asymptotique :
+  Comportement local et asymptotique~:
   \begin{itemize}
   \item
-    limites (opérations, formes indéterminées);
+    limites (opérations, formes indéterminées)\,;
   \item
     fonctions négligeables, équivalents.
   \end{itemize}
 \item
-  Intégration :
+  Intégration~:
   \begin{itemize}
   \item
-    définition d'une intégrale comme une surface;
+    définition d'une intégrale comme une surface\,;
   \item
-    primitive;
+    primitive\,;
   \item
-    calcul d'une intégrale à l'aide d'une primitive;
+    calcul d'une intégrale à l'aide d'une primitive\,;
   \item
     intégration par parties et changement de variable.
   \end{itemize}
