--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -54,9 +54,9 @@ stable.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Schéma réseau annoté avec le plan d'adressage et les services;
+  Schéma réseau annoté avec le plan d'adressage et les services\,;
 \item
-  Démonstration technique commentée;
+  Démonstration technique commentée\,;
 \item
   Rapport technique avec présentation diaporama.
 \end{itemize}
