--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -23,11 +23,11 @@ de sortie accédant à Internet via les ressources informatiques du
 département.On peut caractériser simplement l'adressage \textabbrv{IP}v4 dynamique,
 le masque de sous-réseaux, la passerelle par défaut, les serveurs \textabbrv{DNS}.
 On peut également faire paramétrer un adressage \textabbrv{IP}v4 statique sur un
-poste client.On peut s'appuyer sur les commandes de base: ipconfig,
+poste client.On peut s'appuyer sur les commandes de base~: ipconfig,
 ifconfig, ip, ping, arp, traceroute, arp-scan (ArpCacheWatch sous
 Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\
 On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
-Publique: \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
+Publique~: \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
 distribution Linux Kali en \textabbrv{VM} avec l'outil nmap pour découvrir (en
 interne) les ports ouverts sur les équipements du réseau local
