--- a/latex/saes/SAE12_exemple2.tex
+++ b/latex/saes/SAE12_exemple2.tex
@@ -11,26 +11,26 @@ configurer le plan d'adressage (statique/\textabbrv{DHCP}) et le routage,
 installation des postes clients (Windows, Linux) pour les utilisateurs.}
 
 \ajoutESdescription{
-Il s'agit de :
+Il s'agit de~:
 \begin{itemize}
 \item
-  répondre au cahier des charges;
+  répondre au cahier des charges\,;
 \item
   savoir dimensionner les puissances électriques de l'installation
-  réseau et télécom;
+  réseau et télécom\,;
 \item
-  savoir dimensionner les équipements du réseau;
+  savoir dimensionner les équipements du réseau\,;
 \item
-  assurer l'interconnexion d'une installation temporaire;
+  assurer l'interconnexion d'une installation temporaire\,;
 \item
-  garantir la sécurité des ports des switchs;
+  garantir la sécurité des ports des switchs\,;
 \item
-  utiliser des \textabbrv{VLAN}s distincts (data, management);
+  utiliser des \textabbrv{VLAN}s distincts (data, management)\,;
 \item
   mettre en place une politique sécurisée de mots de passe
-  (utilisateurs, équipements);
+  (utilisateurs, équipements)\,;
 \item
-  savoir monitorer les éléments actifs et observer le trafic sur réseau;
+  savoir monitorer les éléments actifs et observer le trafic sur réseau\,;
 \item
   savoir diagnostiquer les dysfonctionnements.
 \end{itemize}
