--- a/latex/saes/SAE12_exemple4.tex
+++ b/latex/saes/SAE12_exemple4.tex
@@ -15,7 +15,7 @@ valeur de la luminosité ambiante.}
 \ajoutESdescription{
 La SAÉ va servir de base pour de futures SAE plus poussées en IoT ou en
 réseaux.\\
-Les étapes à réaliser seraient les suivantes :
+Les étapes à réaliser seraient les suivantes~:
 \begin{itemize}
 \item
   Connecter un Raspberry PI avec un clavier, un écran et récupérer son
