--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -45,16 +45,16 @@ un collaborateur.}
 
 % Livrable
 \ajoutSlivrables{
-L'évaluation s'appuiera sur tout ou partie des éléments suivants :
+L'évaluation s'appuiera sur tout ou partie des éléments suivants~:
 \begin{itemize}
 \item
-  dossier ou rapport d'étude (compte rendu);
+  dossier ou rapport d'étude (compte rendu)\,;
 \item
-  rapport de mesures;
+  rapport de mesures\,;
 \item
-  \textabbrv{QCM} sur les mesures;
+  \textabbrv{QCM} sur les mesures\,;
 \item
-  grille de suivi du travail;
+  grille de suivi du travail\,;
 \item
   présentation orale des mesures réalisées.
 \end{itemize}
