--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -29,10 +29,10 @@
 
 % Le description
 \ajoutSdescription{L'identité numérique professionnelle prend une place de plus en plus
-importante dans la carrière d'un professionnel R\&T : elle joue un rôle
+importante dans la carrière d'un professionnel R\&T~: elle joue un rôle
 dans sa recherche d'emploi avec la valorisation de ses expériences
 professionnelles comme personnelles. Elle peut également intervenir en
-entreprise : certaines prévoient - dans un annuaire sur l'intranet - des
+entreprise~: certaines prévoient - dans un annuaire sur l'intranet - des
 ``pages personnelles'' renseignées par les salariés pour y présenter
 leurs activités et dynamiser les interactions entre collaborateurs. Elle
 contribue également à développer son réseau professionnel et social,
