--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -6,19 +6,19 @@
 
 \ajoutESproblematique{Cette SAÉ place l'étudiant dans le contexte d'un premier projet de
 développement informatique. Le projet traite d'une activité fréquemment
-demandée au professionnel R\&T : mettre à disposition de ses
+demandée au professionnel R\&T~: mettre à disposition de ses
 collaborateurs une information extraite de différentes sources de
-données, par exemple :
+données, par exemple~:
 \begin{itemize}
 \item
   le recensement des équipements informatiques, des services, des
-  personnels;
+  personnels\,;
 \item
-  l'état de réservations des salles mutualisées dans un bâtiment;
+  l'état de réservations des salles mutualisées dans un bâtiment\,;
 \item
   une synthèse de l'utilisation du réseau ou d'un de ses services, en
   travaillant sur des fichiers journaux
-  (logs);
+  (logs)\,;
 \item
   la visibilité de l'entreprise sur différents sites ou pages Web.
 \end{itemize}
@@ -28,7 +28,7 @@ exploitable/parlante, puis en publier la présentation. L'objectif global
 est d'automatiser au mieux les différentes étapes de son travail.}
 
 \ajoutESdescription{
-L'étudiant s'initiera aux différentes étapes d'un projet informatique :
+L'étudiant s'initiera aux différentes étapes d'un projet informatique~:
 la mise en place de son environnement de travail pour un système
 d'exploitation donné, la programmation du traitement des données (en
 s'appuyant sur les fondamentaux de programmation voire en explorant des
@@ -38,18 +38,18 @@ de gestion de projet..\\
 Il sera demandé à l'étudiant (individuellement ou en petit groupe) de
 traiter des données simples (ne nécessitant pas une structuration
 complexe dans le code informatique ni une base de données), avec
-différentes étapes :
+différentes étapes~:
 \begin{itemize}
 \item
   Préparer l'environnement de travail pour accès distance aux ressources
-  :
+ ~:
   \begin{itemize}
   \item
-    mise en place de l'arborescence;
+    mise en place de l'arborescence\,;
   \item
-    installation/configuration des outils pour le développement;
+    installation/configuration des outils pour le développement\,;
   \item
-    vérification de la connectivité, des droits d'accès;
+    vérification de la connectivité, des droits d'accès\,;
   \item
     mise en place et configuration d'un système de versionnement (par
     ex: git, svn), etc.
@@ -58,14 +58,14 @@ différentes étapes :
   Acquérir des données (locales ou distantes) en les enregistrant dans
   un fichier texte (en se focalisant
   sur des données relativement simples à traiter). Les données pourront
-  par exemple provenir :
+  par exemple provenir~:
   \begin{itemize}
   \item
-    de sites Web;
+    de sites Web\,;
   \item
     d'\textabbrv{API}, par exemple l'\textabbrv{API} Google pour cartographie permettant de
     traiter des données de géolocalisation,
-    ou des sources ouvertes;
+    ou des sources ouvertes\,;
   \item
     de commandes locales (état de la machine) ou réseaux (état du
     réseau).
@@ -74,32 +74,32 @@ différentes étapes :
   Traiter les données pour préparer les éléments nécessaires à leur
   publication en se documentant (au
   besoin sur des bibliothèques spécifiques). Le traitement pourra par
-  exemple consister à :
+  exemple consister à~:
   \begin{itemize}
   \item
-    isoler/choisir/organiser les informations pertinentes;
+    isoler/choisir/organiser les informations pertinentes\,;
   \item
-    extraire des statistiques (moyennes, histogrammes);
+    extraire des statistiques (moyennes, histogrammes)\,;
   \item
     produire des représentations graphiques (nuage de mots, tableaux
     comparatifs).
   \end{itemize}
 \item
   Générer un document pour présenter les données collectées et le
-  publier :
+  publier~:
   \begin{itemize}
   \item
     le document pourra être un fichier texte simple ou structuré (page
-    Markdown voire page Web statique);
+    Markdown voire page Web statique)\,;
   \item
     le document sera ensuite publié sur un serveur distant (en utilisant
     par exemple un serveur web non
-    sécurisé);
+    sécurisé)\,;
   \item
     la publication (c'est-à-dire l'action de déposer le document
     lui-même) pourra être automatisée par
     un script, par exemple en déployant une archive dans le dossier
-    public d'un serveur web. (Remarque :
+    public d'un serveur web. (Remarque~:
     il ne s'agit pas ici de créer une présentation/une page Web
     dynamique dépendant d'une requête).
   \end{itemize}
@@ -113,7 +113,7 @@ différentes étapes :
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Codes informatiques développés : l'étudiant devra fournir l'ensemble
+  Codes informatiques développés~: l'étudiant devra fournir l'ensemble
   de scripts et de codes informatiques,
   permettant la réalisation fonctionnelle du travail demandé. Sa
   production devra être documentée, dans
