--- a/latex/saes/SAE16.tex
+++ b/latex/saes/SAE16.tex
@@ -49,20 +49,20 @@ d'acquisition. Autrement dit, au sein du portfolio, l'apprenant
 documente et analyse sa trajectoire de développement en mobilisant des
 traces, des preuves issues de l'ensemble des mises en situation
 professionnelle (SAÉ) qu'il a vécues. Il pourra s'appuyer sur les outils
-portfolio mis en place par l'établissement: carnet papier, document
+portfolio mis en place par l'établissement~: carnet papier, document
 bureautique ou logiciel dédié.\\
 Le portfolio est un élément structurant des formations en Approche Par
-Compétence (\textabbrv{APC}). En effet, le portfolio :
+Compétence (\textabbrv{APC}). En effet, le portfolio~:
 \begin{itemize}
 \item
   soutient l'apprentissage par la constitution d'un dossier de traces
   (échantillon de preuves, sélectionnées
   par l'étudiant dans le but de rendre compte d'apprentissages
   aboutissant à la maîtrise progressive d'un
-  domaine de compétences);
+  domaine de compétences)\,;
 \item
   permet la validation et la certification de savoir-agir complexes tout
-  au long du parcours de formation;
+  au long du parcours de formation\,;
 \item
   favorise l'auto-détermination du parcours de formation de l'étudiant
   et accompagne son parcours d'insertion
@@ -96,7 +96,7 @@ méthodologie d'écriture du portfolio.}
 
 % Livrable
 \ajoutSlivrables{
-Portfolio : ensemble de traces et de preuves de l'acquisition des
+Portfolio~: ensemble de traces et de preuves de l'acquisition des
 compétences.
 }
 
