--- a/latex/saes/SAE21_exemple2.tex
+++ b/latex/saes/SAE21_exemple2.tex
@@ -7,19 +7,19 @@
 \ajoutESproblematique{L'étudiant se met dans le rôle d'une société locale de services du
 numérique, il est contacté par une entreprise qui lui passe une commande
 : déployer un réseau d'entreprise dans le nouveau siège de la société.\\
-Sa mission consiste à :
+Sa mission consiste à~:
 \begin{itemize}
 \item
   Proposer et mettre en place une infrastructure de réseau d'entreprise
   dotée de services réseaux et
-  de règles de sécurité;
+  de règles de sécurité\,;
 \item
   Mettre en place une \textabbrv{DMZ} pour héberger les serveurs publics de
-  l'entreprise;
+  l'entreprise\,;
 \item
-  Configurer l'accès à Internet;
+  Configurer l'accès à Internet\,;
 \item
-  Mettre en place des règles de sécurité;
+  Mettre en place des règles de sécurité\,;
 \item
   Produire une documentation technique sur la solution déployée.
 \end{itemize}}
@@ -51,7 +51,7 @@ distribution (L3) qui assure le routage inter-vlan et d'un routeur
 passerelle qui fait office de pare-feu. Les services réseaux \textabbrv{HTTP}, DNS,
 \textabbrv{DHCP} et \textabbrv{SSH} sont installés sur des machines virtuelles.\\
 A partir du cahier des charges fourni, l'étudiant sera amené à réaliser
-différentes activités dont voici quelques exemples :
+différentes activités dont voici quelques exemples~:
 \begin{itemize}
 \item
   Plan d'adressage
@@ -74,16 +74,16 @@ différentes activités dont voici quelques exemples :
 
 \ajoutESformes{De façon individuelle ou collective, sur des heures encadrées et non
 encadrées, l'étudiant ou l'équipe, sera confronté aux formes
-pédagogiques suivantes :
+pédagogiques suivantes~:
 \begin{itemize}
 \item
   Création d'un réseau segmenté en \textabbrv{VLAN} avec mise en place d'une \textabbrv{DMZ} et
-  de services réseaux;
+  de services réseaux\,;
 \item
   Élaboration d'une méthode efficace pour tester progressivement la
-  configuration réalisée;
+  configuration réalisée\,;
 \item
-  Utilisation d'outils de diagnostics et analyse des résultats;
+  Utilisation d'outils de diagnostics et analyse des résultats\,;
 \item
   Rédaction de fiches opératoires (notice d'utilisation).
 \end{itemize}}
@@ -93,8 +93,8 @@ pédagogiques suivantes :
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Réseau entreprise : opérationnel répondant aux problématiques
-  suivantes :
+  Réseau entreprise~: opérationnel répondant aux problématiques
+  suivantes~:
   \begin{itemize}
   \item
     un utilisateur interne à l'entreprise peut-il bénéficier des
@@ -109,9 +109,9 @@ pédagogiques suivantes :
     dans l'entreprise et hors de l'entreprise ?
   \end{itemize}
 \item
-  Documentation : les procédures sont-elles applicables par une autre
+  Documentation~: les procédures sont-elles applicables par une autre
   équipe ?
 \item
-  Réunions : présentation finale (soutenance) de la solution mise en
+  Réunions~: présentation finale (soutenance) de la solution mise en
   place.
 \end{itemize}}
