--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -48,7 +48,7 @@ présenter sous forme d'un bilan à un client ou un collaborateur.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Rapport écrit;
+  Rapport écrit\,;
 \item
   Présentation orale des performances mesurées.
 \end{itemize}
