--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -18,14 +18,14 @@ leurs réglages.\\
 Une fois les mesures effectuées, il devra être capable de les analyser
 et, par exemple, de produire une information de type cartographie de
 réception.\\
-Les exemples de signaux à étudier pourront être de type :
+Les exemples de signaux à étudier pourront être de type~:
 \begin{itemize}
 \item
-  signal WiFi;
+  signal WiFi\,;
 \item
-  téléphonie portable;
+  téléphonie portable\,;
 \item
-  réception \textabbrv{TV} : \textabbrv{DVB-S} ou \textabbrv{DVB-T};
+  réception \textabbrv{TV}~: \textabbrv{DVB-S} ou \textabbrv{DVB-T};
 \item
   réception \textabbrv{FM} ou \textabbrv{DAB}.
 \end{itemize}
@@ -34,7 +34,7 @@ Les exemples de signaux à étudier pourront être de type :
 \ajoutESformes{\vspace{-5pt}
 \begin{itemize}
 \item
-  Travaux pratiques, notamment pour les mesures;
+  Travaux pratiques, notamment pour les mesures\,;
 \item
   Projet, notamment pour la recherche sur le système de transmission
   retenu, pour le choix des mesures
@@ -47,7 +47,7 @@ Les exemples de signaux à étudier pourront être de type :
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Rapport écrit;
+  Rapport écrit\,;
 \item
   Présentation orale des performances mesurées et de leur analyse.
 \end{itemize}}
