--- a/latex/saes/SAE22_exemple3.tex
+++ b/latex/saes/SAE22_exemple3.tex
@@ -22,10 +22,10 @@ devra effectuer, quels sont les appareils adéquats, quels devront être
 leurs réglages.\\
 Une fois les mesures effectuées, il devra être capable de les analyser
 et, par exemple, de produire une information de type cartographique.\\
-Les exemples de numérisation à comparer pourront être de type :
+Les exemples de numérisation à comparer pourront être de type~:
 \begin{itemize}
 \item
-  audio en téléphonie;
+  audio en téléphonie\,;
 \item
   audio avec une qualité \textabbrv{HiFi};
 \item
@@ -36,7 +36,7 @@ Les exemples de numérisation à comparer pourront être de type :
 \ajoutESformes{\vspace{-5pt}
 \begin{itemize}
 \item
-  Travaux pratiques, notamment pour les mesures;
+  Travaux pratiques, notamment pour les mesures\,;
 \item
   Projet, notamment pour la recherche sur les standards de numérisations
   retenus, pour le choix des
@@ -49,7 +49,7 @@ Les exemples de numérisation à comparer pourront être de type :
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Rapport écrit;
+  Rapport écrit\,;
 \item
   et/ou présentation orale des performances mesurées et de leur analyse.
 \end{itemize}}
