--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -34,13 +34,13 @@
 % Le description
 \ajoutSdescription{Puisqu'il est au cœur du système d'information de l'entreprise, le
 professionnel R\&T peut être amené à développer différentes solutions
-informatiques : ces solutions peuvent faciliter son travail quotidien
+informatiques~: ces solutions peuvent faciliter son travail quotidien
 (outil pour centraliser les données d'administration de son réseau) ou
 être commandé pour les besoins de ses collaborateurs (annuaire des
 personnels, partage d'informations, \ldots). Ces solutions sont plus
 larges que le simple traitement des données (abordé au semestre 1) et
 visent le développement d'un outil informatique complet partant d'un
-cahier des charges donnés : elles incluent la gestion de données
+cahier des charges donnés~: elles incluent la gestion de données
 structurées (base de données, fichiers de données), leur traitement et
 les éléments d'interaction utilisateur via une interface conviviale et
 pratique. Elles peuvent être documentées grâce à des pages Web voire
@@ -66,7 +66,7 @@ informatique pour le compte de son entreprise.}
   Codes informatiques du site Web fonctionnel et dynamique
 \item
   Documentation technique, informative présentant la méthode de
-  validation (exemple : cahier de tests,
+  validation (exemple~: cahier de tests,
   tests unitaires)
 \item
   Tutoriel d'installation et d'utilisation
