--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -2,7 +2,7 @@
 % Exemple de SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelexemple{Cyberattaque : exploitation de vulnérabilités}
+\nouvelexemple{Cyberattaque~: exploitation de vulnérabilités}
 
 \ajoutESproblematique{Il est essentiel dans une entreprise, quelle qu'en soit la taille, de
 sensibiliser le personnel avec des exemples simples (et si possible
@@ -15,7 +15,7 @@ Dans la continuité de la SAÉ ``sensibilisation à l'hygiène informatique
 et à la cybersécurité'', l'objectif est d'aborder la cybersécurité sous
 un angle plus technique.\\
 Les étudiants seront amenés à reproduire des vulnérabilités et des
-attaques dans un environnement d'étude spécifiquement mis en place: un
+attaques dans un environnement d'étude spécifiquement mis en place~: un
 réseau autonome réel ou simulé qui comportera quelques éléments actifs,
 serveurs et clients opérationnels.\\
 Cette étude permettra de se familiariser avec l'utilisation des
@@ -35,10 +35,10 @@ l'hygiène informatique en contexte professionnel.
 \ajoutESformes{\vspace{-5pt}
 \begin{itemize}
 \item
-  Sur des heures encadrées : TP de R201, R202, R203, R204, R207, R208,
+  Sur des heures encadrées~: TP de R201, R202, R203, R204, R207, R208,
   R209
 \item
-  Sur des heures non encadrées :
+  Sur des heures non encadrées~:
   \begin{itemize}
   \item
     Recherche documentaire
@@ -56,7 +56,7 @@ l'hygiène informatique en contexte professionnel.
 \item
   Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
   intégrant des vulnérabilités et des
-  outils permettant de les exploiter;
+  outils permettant de les exploiter\,;
 \item
   Une présentation de cette maquette, des vulnérabilités et des attaques
   sera faite dans le cadre d'un
