--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -71,7 +71,7 @@ instruments de mesure et d'interpréter les résultats.}
   électrique et au Développement Durable. Coût de fonctionnement des
   équipements.
 \item
-  Exemples : dimensionnement d'une alimentation pour des serveurs,
+  Exemples~: dimensionnement d'une alimentation pour des serveurs,
   limite de puissance sur un câble
   (alternatif ou continu).
 \end{itemize}
