--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -48,13 +48,13 @@ transmission.}
   Types de support de transmission (réseau d'entreprise, réseau
   opérateur)
 \item
-  Caractéristiques d'un ou plusieurs types de supports (exemples: retard
+  Caractéristiques d'un ou plusieurs types de supports (exemples~: retard
   de propagation, atténuation,
   continuité, échos, bruit, perturbations, identifier un défaut, bande
   passante ) à partir de mesures
   et d'analyse des signaux
 \item
-  Prolongement possible : recettage, certification \textabbrv{LAN}.
+  Prolongement possible~: recettage, certification \textabbrv{LAN}.
 \end{itemize}
 }
 
