--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -65,7 +65,7 @@ de compréhension dans un contexte professionnel technique.}
 \item
   Appréhender le vocabulaire technique des domaines cibles
 \item
-  Extensions possibles : télécollaboration, télétandem.
+  Extensions possibles~: télécollaboration, télétandem.
 \end{itemize}
 }
 
