--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -51,18 +51,18 @@ de compréhension dans un contexte professionnel technique.}
 \item
   Savoir structurer son discours oral et écrit (courriel, conversation
   téléphonique, visioconférence,
-  réunion, débat);
+  réunion, débat)\,;
 \item
   Présenter son parcours professionnel à l'oral et à l'écrit (\textabbrv{CV}, lettre
-  de motivation, entretien);
+  de motivation, entretien)\,;
 \item
   Analyser des problèmes et proposer des solutions
 \item
-  Faire un exposé technique;
+  Faire un exposé technique\,;
 \item
-  Développer le vocabulaire technique des domaines cibles;
+  Développer le vocabulaire technique des domaines cibles\,;
 \item
-  Extensions possibles : télécollaboration, télétandem, parcours
+  Extensions possibles~: télécollaboration, télétandem, parcours
   international, dispositif \textabbrv{EMILE}.
 \end{itemize}
 }
