--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -59,11 +59,11 @@ pour gérer de façon efficace le traitement de ces données.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Codes informatiques développés;
+  Codes informatiques développés\,;
 \item
-  Démonstration technique commentée;
+  Démonstration technique commentée\,;
 \item
-  et/ou Rapport technique avec tutoriel d'installation;
+  et/ou Rapport technique avec tutoriel d'installation\,;
 \item
   et/ou Soutenance orale présentant le travail réalisé.
 \end{itemize}
