--- a/latex/saes/SAE21_exemple1.tex
+++ b/latex/saes/SAE21_exemple1.tex
@@ -2,7 +2,7 @@
 % Exemple de SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelexemple{Construction de réseau routé (statique/dynamique), routage inter-\textabbrv{VLAN}:  approche matérielle ou virtuelle}
+\nouvelexemple{Construction de réseau routé (statique/dynamique), routage inter-\textabbrv{VLAN}~:  approche matérielle ou virtuelle}
 
 \ajoutESproblematique{\vspace{-5pt}
 \begin{itemize}
@@ -33,10 +33,10 @@ réseau et surtout vérifier à chaque étape que l'ajout qu'il vient
 d'effectuer permet au réseau de toujours fonctionner.\\
 Développement et configuration d'une architecture de réseau d'entreprise
 simple composée de 6 \textabbrv{VLAN} et 3 routeurs.\\
-Équipements réseau : 4 switches et 3 routeurs.\\
-Extensions possibles : effectuer du \textabbrv{VRF}, ajouter des tunnels, introduire
+Équipements réseau~: 4 switches et 3 routeurs.\\
+Extensions possibles~: effectuer du \textabbrv{VRF}, ajouter des tunnels, introduire
 un \textabbrv{NAT}, effectuer du filtrage sur un \textabbrv{VLAN} spécifique.\\
-Préconisations :
+Préconisations~:
 \begin{itemize}
 \item
   Fourniture d'un cahier des charges pour 2 étudiants
@@ -51,21 +51,21 @@ Préconisations :
 
 
 
-\ajoutESmodalite{Tout ou partie des éléments suivants :
+\ajoutESmodalite{Tout ou partie des éléments suivants~:
 \begin{itemize}
 \item
-  Projet réseau fonctionnel;
+  Projet réseau fonctionnel\,;
 \item
-  Vérification d'une interconnexion complète;
+  Vérification d'une interconnexion complète\,;
 \item
   Vérification de la sécurisation/isolement d'un \textabbrv{VLAN} vis à vis des
-  autres postes clients;
+  autres postes clients\,;
 \item
   Démontrer à l'aide d'un document le respect du cahier des charges. Il
   pourra être effectué une démonstration
   filmée incluant des scénarios de test. On évaluera la qualité de la
   démonstration et la pédagogie de
-  la vidéo;
+  la vidéo\,;
 \item
   Présentation orale avec diaporama ou entretien.
 \end{itemize}}
