--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -1,10 +1,14 @@
-\documentclass[11pt,french]{article} % mathserif
+\documentclass[10pt,lualatex,french]{article} % mathserif
 
-%\usepackage[T1]{fontenc}
-% \usepackage{libertinust1math}
-\usepackage[LUC,T2A,T1]{fontenc}%
-%\usepackage[utf8x]{inputenc}%
-\usepackage[utf8]{inputenc}
+\usepackage{fontspec}
+\setmainfont[Path=fonts/,
+    BoldItalicFont=ArialBoldItalic.ttf,
+    BoldFont      =ArialBold.ttf,
+    ItalicFont    =ArialItalic.ttf]{ArialRegular.ttf}
+
+
+%\usepackage[LUC,T2A,T1]{fontenc}%
+%\usepackage[utf8]{inputenc}
 \usepackage{arevtext}
 \usepackage{tgtermes} % tgadventor} % https://tug.org/FontCatalogue/seriffonts.html
 %\usepackage[condensed]{tgheros}
@@ -25,13 +29,15 @@
 \usepackage{nicematrix} % pour les tableaux de synthèse 
 \usepackage{multirow}
 \usepackage{array}
-\usepackage{fontawesome}
 \usepackage{amssymb}
 \usepackage{multicol}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{fancyhdr}
 \usepackage{xspace}
-\usepackage{babel}
+
+\usepackage[base]{babel}
+\usepackage{polyglossia}
+\setdefaultlanguage{french}
 
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
@@ -109,7 +115,8 @@ Référentiel de formation}
 \rfoot{\thepage}
 
 \begin{document}
-
+\newcommand{\og}{«~}
+\newcommand{\fg}{~»\xspace}
 % Les listes
 \renewcommand{\labelitemi}{$\bullet$}
 \renewcommand{\labelitemii}{$\circ$}
