Test espacement list

--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -55,7 +55,7 @@ pourront servir de support).}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Initiation au réseau
   \begin{itemize}
