--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -9,6 +9,7 @@
 
 %\usepackage[LUC,T2A,T1]{fontenc}%
 %\usepackage[utf8]{inputenc}
+
 \usepackage{arevtext}
 \usepackage{tgtermes} % tgadventor} % https://tug.org/FontCatalogue/seriffonts.html
 %\usepackage[condensed]{tgheros}
@@ -35,6 +36,7 @@
 \usepackage{fancyhdr}
 \usepackage{xspace}
 
+%\usepackage[french]{babel}
 \usepackage[base]{babel}
 \usepackage{polyglossia}
 \setdefaultlanguage{french}
@@ -160,7 +162,7 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 \end{center}
 
 \clearpage
-\RprerequislyceeAJ
+% \RprerequislyceeAJ
 
 % ------ TABLE DES MATIERES (en version draft seulement)
 %\ifdef{\draft}{
